LxLoader: alignment in LxList & visibility fix (!2732)

--- a/src/styles/lx-loaders.css
+++ b/src/styles/lx-loaders.css
@@ -47,6 +47,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   row-gap: var(--loader-row-gap);
 }
 
